add some comments

--- a/ImageClassificationAndGAN.ipynb
+++ b/ImageClassificationAndGAN.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "Ce notebook est composé de deux parties. Dans la première partie, je vais essayer de:\n",
     "* Construire un CNN classifieur afin de classifier des images \n",
-    "* Transfer Learning en utilisant un modèle déjà entrainé\n",
+    "* Faire transfer Learning en utilisant un modèle déjà entrainé\n",
     "\n",
     "Dans la deuxième partie:\n",
-    "* Je parlerai des réseaux GAN et nous allons apprendre la fonction sinus"
+    "* Je parlerai des réseaux GAN et nous allons apprendre la fonction sinus."
    ]
   },
   {
@@ -123,6 +123,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "J'ai utilisé la même transformation pour les données d'entrainement et de test (Normalisation et Standardisation).\n",
+    "\n",
+    "Mais il est très courant de faire de la data augmentation (sur les données d'entrainement) afin d'augumenter la capacité de généralisation du modèle, prévenir le surapprentissage (overfitting).\n",
+    "\n",
+    "On peut penser à des augmentations telles que le cropping, rotation etc ...\n",
+    "\n",
+    "Vous pouvez trouvez ces augumentations ici https://pytorch.org/docs/stable/torchvision/transforms.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -167,7 +180,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les classes sont toutes bien représentées dans notre jeu d'apprentissage."
+    "Les classes sont toutes bien représentées dans notre jeu d'apprentissage.\n",
+    "\n",
+    "\n",
+    "Regardons maintenant quelques images de notre ensemble d'apprentissage."
    ]
   },
   {
@@ -221,7 +237,7 @@
    "source": [
     "A présent je vais construire un simple convolutional classifieur pour classer les images.\n",
     "\n",
-    "Le modèle est composé essentiellement de couches de convolutions et linéaires avec du MaxPooling(downsample features), j'utilise également du dropout pour prévenir un overfitting avec p=0.5."
+    "Le modèle est composé essentiellement de couches de convolutions et linéaires avec du MaxPooling(pour réduire la taille des features), j'utilise également du dropout pour prévenir un overfitting avec p=0.5."
    ]
   },
   {
@@ -354,7 +370,7 @@
     "        accuracy_stats['train'].append(train_epoch_accuracy)   \n",
     "\n",
     "\n",
-    "        with torch.no_grad(): #Ne pas accumuler le gradient \n",
+    "        with torch.no_grad(): #Inutile d'accumuler le gradient pendant cette phase \n",
     "\n",
     "            model.eval()     #mode évaluation (certaines couches sont désactivées)\n",
     "\n",
@@ -413,7 +429,8 @@
     "En plus des couches Dropout, j'utilise une régularisation weight decay de 0.005. Le weight decay ajoute une contrainte sur nos poids pour limiter les valeurs (L2 regularisation).\n",
     "\n",
     "\n",
-    "Pour avoir la bonne valeur sur pour ces hyperparamètres (y compris le batch size, le nombre d'epochs), j'ai testé empiriquement tester plusieurs valeurs et choisir celles qui semblent la mieux adapter à notre problème. "
+    "Pour avoir la bonne valeur pour ces hyperparamètres (y compris le batch size, le nombre d'epochs), j'ai testé empiriquement plusieurs valeurs et choisi celles qui semblent les mieux adaptées à mon problème. \n",
+    "\n"
    ]
   },
   {
@@ -575,8 +592,8 @@
     "Je vais dans la section qui suit utiliser le transfert learning. Il s'agit d'agit d'adapter un modèle déjà entraîné sur nos données. \n",
     "\n",
     "Deux façons de faire le transfert:\n",
-    "* fine tuning: on entraîne un modèle déjà entrainé sur nos données avec comme point de départ les poids déjà appris\n",
-    "* features selection: on ne change les poids que pour la dernière couche\n",
+    "* fine tuning: on apprend les données, à partir d'un modèle déjà entrainé\n",
+    "* features selection: on utilise un modèle entrainé en adaptant et en entrainant que la dernière couche (où les dernières couches)\n",
     "\n",
     "Je vais utiliser la dernière option."
    ]
@@ -765,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut voir que l'accuracy test ne s'éloigne pas trop de l'accuracy train."
+    "On peut voir que l'accuracy test ne s'éloigne pas trop de l'accuracy train (pas d'overfitting)."
    ]
   },
   {
@@ -835,7 +852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut voir que le f1 score est bas (selon les autres f1) pour les mountains et les gaciers."
+    "On peut voir que le f1 score est bas (en fonction des autres f1) pour les mountains et les gaciers."
    ]
   },
   {
@@ -934,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comme dit tout à l'heure le modèle semble parfois avoir du mal à distinguer un glacier d'un mountain et vice versa."
+    "Le modèle semble parfois avoir du mal à distinguer un glacier d'un mountain et vice versa."
    ]
   },
   {
@@ -1304,6 +1321,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
