change in some comments

--- a/ImageClassificationAndGAN.ipynb
+++ b/ImageClassificationAndGAN.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Ce notebook est composé de deux parties. Dans la première partie, je vais essayer de:\n",
     "* Construire un CNN classifieur afin de classifier des images \n",
-    "* Faire transfer Learning en utilisant un modèle déjà entrainé\n",
+    "* Faire du transfert Learning en utilisant un modèle déjà entrainé\n",
     "\n",
     "Dans la deuxième partie:\n",
     "* Je parlerai des réseaux GAN et nous allons apprendre la fonction sinus."
@@ -27,7 +27,7 @@
     "Vous pouvez retrouvées les données utilisées dans cette partie sur https://www.kaggle.com/puneet6060/intel-image-classification.\n",
     "\n",
     "\n",
-    "Nous avons environ 14K d'images pour entrainer nos modèles et 3K images pour les tester.\n",
+    "Nous avons environ 14K images pour entrainer nos modèles et 3K images pour les tester.\n",
     "\n",
     "Les différentes classes sont:\n",
     "* buildings -> 0,\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +123,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'buildings': 0, 'forest': 1, 'glacier': 2, 'mountain': 3, 'sea': 4, 'street': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_train.class_to_idx)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,7 +149,7 @@
     "\n",
     "On peut penser à des augmentations telles que le cropping, rotation etc ...\n",
     "\n",
-    "Vous pouvez trouvez ces augumentations ici https://pytorch.org/docs/stable/torchvision/transforms.html"
+    "Vous pouvez trouvez ces augmentations ici https://pytorch.org/docs/stable/torchvision/transforms.html"
    ]
   },
   {
@@ -589,7 +606,7 @@
     "\n",
     "Peut on faire mieux avec 5 epochs?\n",
     "\n",
-    "Je vais dans la section qui suit utiliser le transfert learning. Il s'agit d'agit d'adapter un modèle déjà entraîné sur nos données. \n",
+    "Je vais dans la section qui suit utiliser le transfert learning. Il s'agit d'adapter un modèle déjà entraîné sur nos données. \n",
     "\n",
     "Deux façons de faire le transfert:\n",
     "* fine tuning: on apprend les données, à partir d'un modèle déjà entrainé\n",
@@ -609,7 +626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour tous détails sur le resnet, vous pouvez consulter l'article https://arxiv.org/abs/1512.03385.\n",
+    "Pour plus de détails sur le resnet, vous pouvez consulter l'article https://arxiv.org/abs/1512.03385.\n",
     "\n",
     "\n",
     "J'utilise ce modèle déjà entrainé sur imagenet, je change la dernière couche pour l'adapter à mon probléme. Pendant la phase d'apprentissage, uniquement les poids de la dernière couche sont appris, les autres poids restent inchangés."
@@ -782,7 +799,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut voir que l'accuracy test ne s'éloigne pas trop de l'accuracy train (pas d'overfitting)."
+    "On peut voir que l'accuracy test ne s'éloigne pas trop de l'accuracy train (pas d'overfitting).\n",
+    "\n",
+    "j'utilise dans ce qui suit ce modèle issu du tranfert learning que j'ai appelé **best_model**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regardons plus en détail comment **best_model** s'est comporté avec nos données tests."
    ]
   },
   {
@@ -852,7 +878,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On peut voir que le f1 score est bas (en fonction des autres f1) pour les mountains et les gaciers."
+    "La classification report donne plusieurs mesures la précision, le rappel etc...\n",
+    "\n",
+    "Je regarde dans ce cadre le f1 score.\n",
+    "\n",
+    "On peut voir que le f1 score est bas (comparé aux autres f1) pour les mountains et les gaciers."
    ]
   },
   {
@@ -951,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le modèle semble parfois avoir du mal à distinguer un glacier d'un mountain et vice versa."
+    "Le modèle semble parfois avoir du mal à distinguer un glacier d'un mountain et vice versa, on observe le même phénomène s'observe entre les buildings et les streets."
    ]
   },
   {
@@ -962,7 +992,9 @@
     "\n",
     "Lorsqu'on s'attaque à ce type de problème, on a souvent un problème d'overfitting mais le Dropout ou la régularisation L2 permet de le contourner.\n",
     "\n",
-    "Le transfert Learning permet d'avoir un accuracy très grand avec peu d'épochs."
+    "Le transfert Learning permet d'avoir un accuracy très grand avec peu d'épochs.\n",
+    "\n",
+    "Il peut être amélioré en faisant une data augmentation modérée et en tunant bien les hyperparamètres sur un GPU (marche mieux) car l'entrainement de ces modèles peut prendre du temps."
    ]
   },
   {
@@ -1003,7 +1035,8 @@
     "\n",
     "tandis qu'un modèle discriminatif va apprendre directement la probabilité conditionnelle $P(Y|X)$ à partir des données.On peut penser au SVM, au réseau de neurones simples définis tout à l'heure (par exemple), la régression logistique etc... \n",
     "\n",
-    "GAN (Generative Adversarial Network), est un modèle génératif qui a été proposé par Ian J. Goodfellow et son équipe en 2014.https://arxiv.org/abs/1406.2661\n",
+    "GAN (Generative Adversarial Network), est un modèle génératif qui a été proposé par Ian J. Goodfellow et son équipe en 2014 https://arxiv.org/abs/1406.2661.\n",
+    "\n",
     "Il s'agit de deux modèles en compétition le discriminateur D et le générateur G.\n",
     "\n",
     "\n",
@@ -1079,7 +1112,7 @@
    "source": [
     "Mon discriminateur est composé de couches linéaires, relu et dropout et une couche de sortie sigmoid.\n",
     "\n",
-    "Le générateur est composé de couches linéaires et relu. La fonction coût utilisé est le Binary Cross Entropy Loss https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html, avec comme algorithme d'optmisation Adam.\n",
+    "Le générateur est composé de couches linéaires et relu. La fonction coût utilisé est le Binary Cross Entropy Loss https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html, avec comme algorithme d'optimisation Adam.\n",
     "\n",
     "Entraîner un modèle GAN (images, vidéos notamment) peut être très complexe, problème de convergence, cependant il existe certaines heuristiques vous pouvez consulter:\n",
     "https://machinelearningmastery.com/how-to-code-generative-adversarial-network-hacks/\n",
@@ -1245,7 +1278,7 @@
     "\n",
     "D(G(z)) commence lui par 0  et commence à converger vers 0.5.\n",
     "\n",
-    "* D(x) qui représente la moyenne des estimations des probabilités que les exemples viennent de l'ensemble d'apprentissage\n",
+    "* D(x) représente la moyenne des estimations des probabilités que les exemples viennent de l'ensemble d'apprentissage.\n",
     "* D(G(z)) représente la moyenne des estimations des probabilités que les exemples viennent du générateur.\n",
     "\n",
     "\n",
@@ -1301,6 +1334,13 @@
     "plt.scatter(data[:,0],data[:,1],label='True value')\n",
     "plt.scatter(fake.detach().numpy()[:,0],fake.detach().numpy()[:,1],c='r',label='Généré')\n",
     "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En rouge les valeurs générées par le générateur, et en valeur les vraies valeurs de la fonction sinus."
    ]
   },
   {
