--- a/ImageClassificationAndGAN.ipynb
+++ b/ImageClassificationAndGAN.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Ce notebook est composé de deux parties. Dans la première partie, je vais essayer de:\n",
     "* Construire un CNN classifieur afin de classifier des images \n",
-    "* Faire du transfert Learning en utilisant un modèle déjà entrainé\n",
+    "* Faire du Transfert Learning en utilisant un modèle déjà entrainé\n",
     "\n",
     "Dans la deuxième partie:\n",
     "* Je parlerai des réseaux GAN et nous allons apprendre la fonction sinus."
@@ -24,7 +24,7 @@
    "metadata": {},
    "source": [
     "#### Data\n",
-    "Vous pouvez retrouvées les données utilisées dans cette partie sur https://www.kaggle.com/puneet6060/intel-image-classification.\n",
+    "Vous pouvez retrouver les données utilisées dans cette partie sur https://www.kaggle.com/puneet6060/intel-image-classification.\n",
     "\n",
     "\n",
     "Nous avons environ 14K images pour entrainer nos modèles et 3K images pour les tester.\n",
@@ -254,7 +254,7 @@
    "source": [
     "A présent je vais construire un simple convolutional classifieur pour classer les images.\n",
     "\n",
-    "Le modèle est composé essentiellement de couches de convolutions et linéaires avec du MaxPooling(pour réduire la taille des features), j'utilise également du dropout pour prévenir un overfitting avec p=0.5."
+    "Le modèle est composé essentiellement de couches de convolutions et linéaires avec du MaxPooling (pour réduire la taille des features), j'utilise également du dropout pour prévenir un overfitting avec p=0.5."
    ]
   },
   {
@@ -443,7 +443,7 @@
     "\n",
     "J'utilise un learning rate de 0.001 qui contrôle comment nos poids sont mis à jour. \n",
     "\n",
-    "En plus des couches Dropout, j'utilise une régularisation weight decay de 0.005. Le weight decay ajoute une contrainte sur nos poids pour limiter les valeurs (L2 regularisation).\n",
+    "En plus des couches Dropout, j'utilise une régularisation weight decay de 0.005. Le weight decay ajoute une contrainte sur nos poids pour limiter les valeurs (L2 régularisation).\n",
     "\n",
     "\n",
     "Pour avoir la bonne valeur pour ces hyperparamètres (y compris le batch size, le nombre d'epochs), j'ai testé empiriquement plusieurs valeurs et choisi celles qui semblent les mieux adaptées à mon problème. \n",
@@ -629,7 +629,7 @@
     "Pour plus de détails sur le resnet, vous pouvez consulter l'article https://arxiv.org/abs/1512.03385.\n",
     "\n",
     "\n",
-    "J'utilise ce modèle déjà entrainé sur imagenet, je change la dernière couche pour l'adapter à mon probléme. Pendant la phase d'apprentissage, uniquement les poids de la dernière couche sont appris, les autres poids restent inchangés."
+    "J'utilise ce modèle déjà entrainé sur imagenet, je change la dernière couche pour l'adapter à mon problème. Pendant la phase d'apprentissage, uniquement les poids de la dernière couche sont appris, les autres poids restent inchangés."
    ]
   },
   {
@@ -801,7 +801,7 @@
    "source": [
     "On peut voir que l'accuracy test ne s'éloigne pas trop de l'accuracy train (pas d'overfitting).\n",
     "\n",
-    "j'utilise dans ce qui suit ce modèle issu du tranfert learning que j'ai appelé **best_model**."
+    "J'utilise dans la suite ce modèle issu du transfert learning que j'ai appelé **best_model**."
    ]
   },
   {
@@ -878,9 +878,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La classification report donne plusieurs mesures la précision, le rappel etc...\n",
+    "La classification report donne plusieurs mesures la précision, le rappel, le f1-score.\n",
     "\n",
-    "Je regarde dans ce cadre le f1 score.\n",
     "\n",
     "On peut voir que le f1 score est bas (comparé aux autres f1) pour les mountains et les gaciers."
    ]
@@ -981,7 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le modèle semble parfois avoir du mal à distinguer un glacier d'un mountain et vice versa, on observe le même phénomène s'observe entre les buildings et les streets."
+    "Le modèle semble parfois avoir du mal à distinguer un glacier d'un mountain et vice versa; on observe le même phénomène entre les buildings et les streets."
    ]
   },
   {
@@ -990,9 +989,9 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "Lorsqu'on s'attaque à ce type de problème, on a souvent un problème d'overfitting mais le Dropout ou la régularisation L2 permet de le contourner.\n",
+    "Lorsqu'on s'attaque à ce type de problème, on peut avoir affaire à un overfitting mais le Dropout ou la régularisation L2 permet de le contourner.\n",
     "\n",
-    "Le transfert Learning permet d'avoir un accuracy très grand avec peu d'épochs.\n",
+    "Le Transfert Learning permet d'avoir un accuracy très grand avec peu d'épochs.\n",
     "\n",
     "Il peut être amélioré en faisant une data augmentation modérée et en tunant bien les hyperparamètres sur un GPU (marche mieux) car l'entrainement de ces modèles peut prendre du temps."
    ]
@@ -1033,11 +1032,11 @@
     "On peut penser au GMM (Gaussian Mixture  Model), le classifieur Naive Bayes, les chaînes de Markov cachés etc...\n",
     "\n",
     "\n",
-    "tandis qu'un modèle discriminatif va apprendre directement la probabilité conditionnelle $P(Y|X)$ à partir des données.On peut penser au SVM, au réseau de neurones simples définis tout à l'heure (par exemple), la régression logistique etc... \n",
+    "Tandis qu'un modèle discriminatif va apprendre directement la probabilité conditionnelle $P(Y|X)$ à partir des données. On peut penser au SVM, au réseau de neurones simples définis tout à l'heure (par exemple), la régression logistique etc... \n",
     "\n",
     "GAN (Generative Adversarial Network), est un modèle génératif qui a été proposé par Ian J. Goodfellow et son équipe en 2014 https://arxiv.org/abs/1406.2661.\n",
     "\n",
-    "Il s'agit de deux modèles en compétition le discriminateur D et le générateur G.\n",
+    "Il s'agit de deux modèles en compétition, le discriminateur D et le générateur G.\n",
     "\n",
     "\n",
     "* le but du générateur dans la phase d'apprentissage est de maximiser la probabilité que le discriminateur se trompe en générant des exemples (fake) ressemblant de plus en plus aux données d'apprentissage.\n",
@@ -1046,7 +1045,7 @@
     "\n",
     "Formellement nous allons maximiser pour le discriminateur $log(D(x))+log(1-D(G(z))$ où z est la variable latente ou le noise.\n",
     "\n",
-    "Pour le générateur nous allons minimiser $log(1-D(G(z))$, en pratique on maximise (voir le papier) log(D(G(z)).\n"
+    "Pour le générateur nous allons minimiser $log(1-D(G(z))$, en pratique on maximise log(D(G(z)) (voir le papier).\n"
    ]
   },
   {
@@ -1112,7 +1111,9 @@
    "source": [
     "Mon discriminateur est composé de couches linéaires, relu et dropout et une couche de sortie sigmoid.\n",
     "\n",
-    "Le générateur est composé de couches linéaires et relu. La fonction coût utilisé est le Binary Cross Entropy Loss https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html, avec comme algorithme d'optimisation Adam.\n",
+    "Le générateur est composé de couches linéaires et relu. \n",
+    "\n",
+    "La fonction coût utilisé est le Binary Cross Entropy Loss https://pytorch.org/docs/stable/generated/torch.nn.BCELoss.html, avec comme algorithme d'optimisation Adam.\n",
     "\n",
     "Entraîner un modèle GAN (images, vidéos notamment) peut être très complexe, problème de convergence, cependant il existe certaines heuristiques vous pouvez consulter:\n",
     "https://machinelearningmastery.com/how-to-code-generative-adversarial-network-hacks/\n",
@@ -1340,7 +1341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En rouge les valeurs générées par le générateur, et en valeur les vraies valeurs pour un batch.\n",
+    "En rouge les valeurs générées par le générateur, et en bleu les vraies valeurs pour un batch.\n",
     "\n",
     "Je vais à présent générer un exemple à partir d'un bruit."
    ]
