--- a/ImageClassificationAndGAN.ipynb
+++ b/ImageClassificationAndGAN.ipynb
@@ -1024,7 +1024,7 @@
    "source": [
     "C'est quoi un GAN? Avant de répondre à cette question, je fais un petit détour pour parler des modèles discriminatifs et génératifs.\n",
     "\n",
-    "Un modèle génératif est un modèle qui apprend la distribution jointe $P(X,Y)$ avec X, Y deux variables aléatoires et par la formule de Bayes va estimer la probabilté $P(Y|X)$. Pour rappel la formule de Bayes s'écrit: $$P(Y|X)=\\frac {P(X|Y) P(Y)}{P(X)}$$ où \n",
+    "Un modèle génératif est un modèle qui apprend la distribution jointe $P(X,Y)$ avec X, Y deux variables aléatoires et par la formule de Bayes va estimer la probabilté $P(Y|X)$ dans le cadre d'une classification. Pour rappel la formule de Bayes s'écrit: $$P(Y|X)=\\frac {P(X|Y) P(Y)}{P(X)}$$ où \n",
     "\n",
     "* $P(Y|X)$ est appelé probabilité a posteriori (statistiques bayésiennes)\n",
     "* $P(Y)$ est la probabilité à priori (statistiques bayésiennes)\n",
